# waybar-mpris-enhanced

./: .editorconfig  LICENSE.md  README.md  mpris-enhanced.css  mpris-enhanced.jsonc  mpris-enhanced.py  mpris_enhanced.py  pyproject.toml
mpris_enhanced/: __init__.py  __main__.py  constants.py  main.py  playerctl.py  utils.py
mpris_enhanced/components/: __init__.py  base.py  controls.py  info.py
scripts/: install.sh  uninstall.sh
