[project]
name = "waybar-mpris-enhanced"
version = "1.0.0"
description = "Enhanced MPRIS media module for Waybar"
requires-python = ">=3.8"

[tool.ruff]
target-version = "py38"
line-length = 80

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
